--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Rafael Cesar Gomes Benedicto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^3.22.4"
   }
 }
